<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="10">

        <RadioGroup
            android:id="@+id/projectsRadioGroup"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="10"
            android:orientation="horizontal"
            android:weightSum="3">

            <RadioButton
            android:id="@+id/projectsAddButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:gravity="center"
                android:textColor="@drawable/x_radiobutton_text_color_selector"
            android:text="@string/add_a_project" />

            <RadioButton
                android:id="@+id/projectsConstructionButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:textColor="@drawable/x_radiobutton_text_color_selector"
                android:text="@string/construction" />

            <RadioButton
                android:id="@+id/projectsCompletedButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:button="@null"
                android:gravity="center"
                android:textColor="@drawable/x_radiobutton_text_color_selector"
                android:text="@string/completed" />
        </RadioGroup>

        <ImageView
            android:id="@+id/projectsSearch"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:src="@drawable/ic_search_grey_big" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/projectsViewPager"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v4.view.ViewPager>
</LinearLayout>