<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.administrator.financialauditingapppro.MainDesk.ProjectsDetail.ProjectDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/pDBack"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/icon_arrowback"/>
        <TextView
            android:id="@+id/pDAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"/>
    </LinearLayout>

    <RadioGroup
        android:id="@+id/projectDetailsSelect"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <RadioButton
            android:id="@+id/pDUpload"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/upload_pics"/>
        <RadioButton
            android:id="@+id/pDAcceptence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/project_progess"/>
        <RadioButton
            android:id="@+id/pDInformation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:button="@null"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/project_info"/>
    </RadioGroup>



    <FrameLayout
        android:id="@+id/pDContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    </FrameLayout>
    <!--<ImageView-->
        <!--android:id="@+id/pD_BaseIV"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->

</LinearLayout>
